--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "lekeabiodun/livewire-single-file-component",
+    "description": "Laravel livewire single file component",
     "keywords": [
-        ":vendor_name",
+        "lekeabiodun",
         "laravel",
-        ":package_slug"
+        "livewire-single-file-component"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/lekeabiodun/livewire-single-file-component",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Leke Abiodun",
+            "email": "lekepeterabiodun@gmail.com",
             "role": "Developer"
         }
     ],
@@ -34,13 +34,13 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Lekeabiodun\\LivewireSingleFileComponent\\": "src",
+            "Lekeabiodun\\LivewireSingleFileComponent\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Lekeabiodun\\LivewireSingleFileComponent\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -54,10 +54,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Lekeabiodun\\LivewireSingleFileComponent\\LivewireSingleFileComponentServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "LivewireSingleFileComponent": "Lekeabiodun\\LivewireSingleFileComponent\\Facades\\LivewireSingleFileComponent"
             }
         }
     },
